# Rubiks-Cube-Solver

./: .gitignore  CMakeLists.txt  Readme.md
include/: PatternDatabase.h  RubiksCube.h
src/: PatternDatabase.cpp  RubiksCube.cpp  generator_main.cpp  solver_main.cpp
